avfilter/vf_fps: fix rounding error accumulation

Fixes Ticket3329

Reviewed-by: Nicolas George <george@nsup.org>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>